--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "greenspaces",
   "private": true,
+  "engines": {
+    "node": ">=6.0.0",
+    "yarn": ">=0.25.2"
+  },
   "dependencies": {
     "@rails/webpacker": "3.5",
     "babel-preset-react": "~6.24.1",
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
+    "react-router": "3.2.1",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.1",
-    "webpack-cli": "^2.0.10",
     "babel-plugin-transform-runtime": "^6.23.0",
     "enzyme": "~2.9.1",
     "fetch-mock": "5",
     "fetch-ponyfill": "^6.0.2",
+    "isomorphic-fetch": "^2.2.1",
     "jasmine-core": "~2.4.1",
     "jasmine-enzyme": "~3.4.0",
     "karma": "~0.13.22",
@@ -26,7 +30,9 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "2.0.1",
     "phantomjs-prebuilt": "~2.1.14",
-    "react-addons-test-utils": "~15.6.2"
+    "react-addons-test-utils": "~15.6.2",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "start": "./bin/webpack-dev-server",
