created neighborhoods. added top bar links. created tests

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 # DOCUMENT YOUR REQUIRED ENV VARIABLES HERE
-# SUPER_SECRET_KEY="abc123" 
+# SUPER_SECRET_KEY="abc123"
+
+
+AWS_ACCESS_KEY_ID=AKIA3M5EZD2TJKYF2JI3
+AWS_SECRET_ACCESS_KEY=LV8EJrXxjhUk6eUQ3592iQA9er9dEFmIxDAzMx6u
+
+S3_BUCKET=green-spaces-production
